syntax = "proto3";

option optimize_for = SPEED;
// option optimize_for = LITE_RUNTIME;
// option optimize_for = CODE_SIZE;
// --cpp_out=lite:,--cpp_out=
option cc_enable_arenas = true;

option go_package = "github.com/atframework/atsf4g-go/component-protocol-private/config/protocol/config";

package proy.config;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

import "atframe/atapp_conf.proto";

// import "protocol/config/svr.hpa.config.proto";
// import "protocol/config/svr.telemetry.config.proto";

message logic_server_shared_component_cfg {
  bool task_manager = 101
      [ (atapp.protocol.CONFIGURE) = {default_value : "true"} ];
  bool router_manager_set = 102
      [ (atapp.protocol.CONFIGURE) = {default_value : "true"} ];
  bool session_manager = 103
      [ (atapp.protocol.CONFIGURE) = {default_value : "false"} ];
  bool excel_config = 104
      [ (atapp.protocol.CONFIGURE) = {default_value : "false"} ];
}

message logic_server_cfg {
  int64 open_service_time = 101;
  bool maintenance_mode = 102;
  string resource_path = 103
      [ (atapp.protocol.CONFIGURE) = {default_value : "../../resource"} ];
  string log_path = 104
      [ (atapp.protocol.CONFIGURE) = {default_value : "../log"} ];
  google.protobuf.Timestamp reload_timepoint = 105;

  logic_server_shared_component_cfg shared_component = 106;
}

message logic_redis_cfg {
  repeated string addrs = 1;
  string password = 2;
  int32 pool_size = 3 [(atapp.protocol.CONFIGURE) = { default_value: "100" min_value: "50" }];
  string record_prefix = 4;
  bool random_prefix = 5;
}

message webserver_cfg {
  string host = 1 [ (atapp.protocol.CONFIGURE) = {default_value : ""} ];
  int32 port = 2 [
    (atapp.protocol.CONFIGURE) = {default_value : "7001" min_value : "80"}
  ];
  google.protobuf.Duration read_timeout = 3
      [ (atapp.protocol.CONFIGURE) = {default_value : "15s"} ];
  google.protobuf.Duration write_timeout = 4
      [ (atapp.protocol.CONFIGURE) = {default_value : "15s"} ];
  google.protobuf.Duration idle_timeout = 5
      [ (atapp.protocol.CONFIGURE) = {default_value : "60s"} ];

  string tls_cert_file = 6;
  string tls_key_file = 7;
}

message websocket_server_cfg {
  uint32 max_connections = 1
      [ (atapp.protocol.CONFIGURE) = {default_value : "50000"} ];
  uint32 read_buffer_size = 2
      [ (atapp.protocol.CONFIGURE) = {default_value : "4096"} ];
  uint32 write_buffer_size = 3
      [ (atapp.protocol.CONFIGURE) = {default_value : "4096"} ];

  google.protobuf.Duration handshake_timeout = 4
      [ (atapp.protocol.CONFIGURE) = {default_value : "10s" min_value : "1s"} ];
  google.protobuf.Duration pong_wait = 5
      [ (atapp.protocol.CONFIGURE) = {default_value : "60s" min_value : "1s"} ];
  google.protobuf.Duration ping_period = 6
      [ (atapp.protocol.CONFIGURE) = {default_value : "54s" min_value : "1s"} ];
  google.protobuf.Duration write_wait = 7
      [ (atapp.protocol.CONFIGURE) = {default_value : "10s" min_value : "1s"} ];

  uint32 max_message_size = 8 [
    (atapp.protocol.CONFIGURE) = {default_value : "2097152" min_value : "32768"}
  ];
  uint32 max_write_message_count = 9
      [ (atapp.protocol.CONFIGURE) = {default_value : "256" min_value : "1"} ];

  bool enable_compression = 10
      [ (atapp.protocol.CONFIGURE) = {default_value : "true"} ];

  string path = 11 [ (atapp.protocol.CONFIGURE) = {default_value : "/ws/v1"} ];

  repeated string sub_protocols = 12;
}

message logic_user_async_job_cfg {
  google.protobuf.Duration timeout = 101 [(atapp.protocol.CONFIGURE) = { default_value: "30s" min_value: "5s" }];
  google.protobuf.Duration interval = 102 [(atapp.protocol.CONFIGURE) = { default_value: "10m" min_value: "60s" }];

  google.protobuf.Duration conflict_checking_timeout = 201
      [(atapp.protocol.CONFIGURE) = { default_value: "30m" min_value: "5s" }];
  uint32 conflict_checking_queue_size = 202 [(atapp.protocol.CONFIGURE) = { default_value: "1000" min_value: "1" }];
  uint32 retry_queue_size = 203 [(atapp.protocol.CONFIGURE) = { default_value: "100" min_value: "1" }];
  int32 default_retry_times = 204 [(atapp.protocol.CONFIGURE) = { default_value: "3" min_value: "0" }];
}

message logic_user_cfg {
  uint64 max_online = 101
      [ (atapp.protocol.CONFIGURE) = {default_value : "50000"} ];
  string default_openid = 102
      [ (atapp.protocol.CONFIGURE) = {default_value : "gm://system"} ];
  logic_user_async_job_cfg async_job = 103;
  bool enable_session_actor_log = 104 [(atapp.protocol.CONFIGURE) = { default_value: "true" }];
}

message logic_session_cfg {
  google.protobuf.Duration login_code_protect = 101 [(atapp.protocol.CONFIGURE) = { default_value: "20m" }];
  google.protobuf.Duration login_code_valid_sec = 102 [(atapp.protocol.CONFIGURE) = { default_value: "10m" }];
  google.protobuf.Duration login_ban_time = 103 [(atapp.protocol.CONFIGURE) = { default_value: "3h" }];
  google.protobuf.Duration tick_sec = 104 [(atapp.protocol.CONFIGURE) = { default_value: "60s" }];
  bool enable_actor_log = 105 [(atapp.protocol.CONFIGURE) = { default_value: "false" }];
  bool enable_actor_otel_log = 106 [(atapp.protocol.CONFIGURE) = { default_value: "false" }];
  bool remove_player_cache_when_stop = 107 [(atapp.protocol.CONFIGURE) = { default_value: "true" }];
  uint64 actor_log_size = 108 [(atapp.protocol.CONFIGURE) = { default_value: "10MB" size_mode: true }];
  uint64 actor_log_rotate = 109 [(atapp.protocol.CONFIGURE) = { default_value: "3" min_value: "1" }];
  google.protobuf.Duration actor_auto_flush = 110 [(atapp.protocol.CONFIGURE) = { default_value: "3s" min_value: "1s" }];
}

message logic_task_stack_cfg {
  uint64 size = 101 [
    (atapp.protocol.CONFIGURE) = {default_value : "512KB" size_mode : true}
  ];
  uint64 gc_once_number = 102
      [ (atapp.protocol.CONFIGURE) = {default_value : "10" min_value : "1"} ];
  uint64 pool_max_count = 103 [
    (atapp.protocol.CONFIGURE) = {default_value : "25000" min_value : "1"}
  ];
  uint64 pool_min_count = 104
      [ (atapp.protocol.CONFIGURE) = {default_value : "64"} ];
  uint64 mmap_count = 105 [
    (atapp.protocol.CONFIGURE) = {default_value : "60000" min_value : "200"}
  ]; // sys mmap configure(linux: only, >=busy_count*2+keep_count)
  uint64 busy_count = 106 [
    (atapp.protocol.CONFIGURE) = {default_value : "20000" min_value : "1"}
  ];
  uint64 keep_count = 107 [
    (atapp.protocol.CONFIGURE) = {default_value : "10000" min_value : "100"}
  ];
  uint64 busy_warn_count = 108 [
    (atapp.protocol.CONFIGURE) = {default_value : "15000" min_value : "100"}
  ];
}

message logic_task_stats_cfg {
  google.protobuf.Duration interval = 101
      [ (atapp.protocol.CONFIGURE) = {default_value : "60s" min_value : "1s"} ];
  bool enable_internal_pstat_log = 102
      [ (atapp.protocol.CONFIGURE) = {default_value : "true"} ];
}

message logic_task_type_cfg {
  google.protobuf.Duration timeout = 101
      [ (atapp.protocol.CONFIGURE) = {default_value : "8s" min_value : "1s"} ];
}

message logic_task_trace_cfg {
  // 链路跟踪采样率（千分率，每秒结算）
  int32 sample_permillage = 1;

  // 链路跟踪每秒最大记录数量
  int32 max_count_per_second = 12;
  // 链路跟踪每分钟最大记录数量
  int32 max_count_per_minute = 22;
}

message logic_task_cfg {
  logic_task_type_cfg csmsg = 101;
  logic_task_type_cfg nomsg = 102;
  logic_task_type_cfg paymsg = 103;
  logic_task_type_cfg warn = 104;

  int32 actor_max_loop_count = 151 [(atapp.protocol.CONFIGURE) = { default_value: "100" min_value: "1" }];
  int32 actor_max_pending_count  = 152 [(atapp.protocol.CONFIGURE) = { default_value: "100000" min_value: "1" }];

  logic_task_stats_cfg stats = 201;
  logic_task_stack_cfg stack = 301;
  logic_task_trace_cfg trace = 401;
}

message logic_heartbeat_cfg {
  google.protobuf.Duration interval = 101 [(atapp.protocol.CONFIGURE) = { default_value: "120s" min_value: "1s" }];
  google.protobuf.Duration tolerance = 102;
  uint32 error_times = 103;
  uint32 ban_error_times = 104;
  google.protobuf.Duration ban_time_bound = 105;
}

message logic_router_cfg {
  google.protobuf.Duration cache_update_interval = 101 [
    (atapp.protocol.CONFIGURE) = {default_value : "1800s" min_value : "1s"}
  ];
  google.protobuf.Duration cache_free_timeout = 102 [
    (atapp.protocol.CONFIGURE) = {default_value : "600s" min_value : "1s"}
  ];
  google.protobuf.Duration cache_retry_interval = 103 [
    (atapp.protocol.CONFIGURE) = {default_value : "256ms" min_value : "1ms"}
  ];
  google.protobuf.Duration object_free_timeout = 104 [
    (atapp.protocol.CONFIGURE) = {default_value : "1500s" min_value : "1s"}
  ];
  google.protobuf.Duration object_save_interval = 105 [
    (atapp.protocol.CONFIGURE) = {default_value : "600s" min_value : "1s"}
  ];
  google.protobuf.Duration object_retry_interval = 106 [
    (atapp.protocol.CONFIGURE) = {default_value : "256ms" min_value : "1ms"}
  ];
  google.protobuf.Duration default_timer_interval = 107 [
    (atapp.protocol.CONFIGURE) = {default_value : "300s" min_value : "10s"}
  ];
  google.protobuf.Duration fast_timer_interval = 108
      [ (atapp.protocol.CONFIGURE) = {default_value : "10s" min_value : "1s"} ];
  uint32 retry_max_ttl = 109
      [ (atapp.protocol.CONFIGURE) = {default_value : "3" min_value : "1"} ];
  uint64 pending_action_batch_count = 110
      [ (atapp.protocol.CONFIGURE) = {default_value : "200" min_value : "1"} ];
  uint64 pending_action_max_count = 111
      [ (atapp.protocol.CONFIGURE) = {default_value : "2000" min_value : "1"} ];
  uint64 closing_action_batch_count = 112
      [ (atapp.protocol.CONFIGURE) = {default_value : "500" min_value : "1"} ];
  uint32 transfer_max_ttl = 113
      [ (atapp.protocol.CONFIGURE) = {default_value : "128" min_value : "1"} ];
}


message logic_localization_cfg { string lang = 1; }

message logic_transaction_cfg {
  google.protobuf.Duration timeout = 1
      [ (atapp.protocol.CONFIGURE) = {default_value : "10s" min_value : "1s"} ];
}

message logic_excel_cfg {
  bool enable = 1 [(atapp.protocol.CONFIGURE) = { default_value: "true"}];
  string bindir = 2 [(atapp.protocol.CONFIGURE) = { default_value: "../../resource/excel" }];
}

message logic_operation_support_system_log_cfg {
  bool enable = 1 [(atapp.protocol.CONFIGURE) = { default_value: "true" }];
  string file = 2;
  string writing_alias = 3;
  atapp.protocol.atapp_log_sink_file_rotate rotate = 4;
  google.protobuf.Duration flush_interval = 5;
}

message logic_operation_support_system_cfg {
  logic_operation_support_system_log_cfg oss_cfg = 1;
  logic_operation_support_system_log_cfg mon_cfg = 2;
}

message logic_section_cfg {
  // 通用配置
  uint32 world_id = 1;
  uint32 zone_id = 2;
  uint32 logic_id = 3;
  logic_localization_cfg localization = 4;
  google.protobuf.Duration remote_configure_update_interval = 5
      [(atapp.protocol.CONFIGURE) = { default_value: "300s" min_value: "60s" }];

  logic_server_cfg server = 102;
  logic_user_cfg user = 103;
  logic_session_cfg session = 104;
  logic_task_cfg task = 105;
  logic_heartbeat_cfg heartbeat = 106;
  logic_router_cfg router = 107;
  logic_excel_cfg excel = 110;
  logic_transaction_cfg transaction = 111;
  logic_operation_support_system_cfg operation_support_system = 112;
}

message lobby_server_cfg {
}
